Math exercises: Refactor code after code analysis